# wordpress-bazooka

./: .gitignore  CAHIER_DES_CHARGES.md  README.md  bazooka.py  bazooka.spec  pyproject.toml  run_gui.py
.github/workflows/: ci.yml  release.yml
core/: __init__.py  engine.py  models.py  session.py  tor_proxy.py
cve_db/: .wp_fingerprints_progress.json  __init__.py  bazooka_cve.db  manager.py  prewarm.py  schema.sql  wordfence_fetcher.py  wp_fingerprints_builder.py
data/: db_backup_paths.txt  dev_admin_tools.txt  wp_fingerprints.json  wp_plugins_priority.txt
gui/: app.py
gui/templates/: dashboard.html  mockup-dashboard.html  scan.html
modules/: __init__.py  base.py
modules/enum/: application_passwords.py  backup_finder.py  contact_forms.py  cron_jobs.py  debug_log.py  directory_listing.py  email_harvesting.py  graphql_enum.py  gravatar_reverse.py  media_attachment_brute.py  media_enum.py  object_cache.py  php_source_disclosure.py  registration_check.py  rest_api.py  shortcode_parser.py  source_maps.py  timthumb_detect.py  tmm_db_migrate.py  woocommerce.py  wp_auth_inventory.py  wp_config_audit.py  wp_content_detect.py  wp_multisite.py  wp_plugins.py  wp_themes.py  wp_users.py  wp_version.py  wp_version_fingerprint.py  xmlrpc_methods.py
modules/exploit/: api_key_extraction.py  authenticated_scan.py  cors_exploit_poc.py  git_dumper.py  origin_bypass.py  password_spray.py  pma_bruteforce.py  ssrf_internal.py  ssrf_port_scan.py  woocommerce_idor.py  wordlist_generator.py  wp_cron_dos.py  wp_login_bruteforce.py  xmlrpc_bruteforce.py
modules/infra/: lateral_movement.py  network_scan.py  service_detect.py  ssl_cert_enum.py  vhost_enum.py
modules/recon/: ct_logs.py  dns_enum.py  email_breach_deep.py  google_dorking.py  headers_analysis.py  origin_finder.py  robots_parser.py  social_media_osint.py  ssl_scan.py  subdomain_enum.py  technology_stack.py  waf_detect.py  wayback_machine.py  whois_lookup.py
modules/vuln/: admin_panel_exposure.py  auth_bypass.py  backup_download.py  cors_check.py  csrf_check.py  cve_matcher.py  directory_traversal.py  file_upload.py  honeypot_detect.py  host_header_injection.py  idor_check.py  lfi_scanner.py  misconfig_check.py  mod_rewrite_cve.py  nuclei_wrapper.py  open_ports_exposure.py  open_redirect.py  password_policy.py  password_reset_poisoning.py  php_info_exposure.py  plugin_vulns_active.py  rate_limit.py  rest_api_exposure.py  security_headers.py  session_auth.py  sqli_scanner.py  ssrf_xmlrpc.py  user_enum_timing.py  xss_scanner.py  xxe_scanner.py
report/: docx_exporter.py  generator.py  html_template.py
scripts/: take_screenshots.py
testlab/: docker-compose.yml  setup-after.sh  vulnerable_wp.py
testlab/dvwp-extend/: dvwp-extended-cve-truth.md  extend-dvwp.sh
testlab/vuln-config/: .htaccess  git-config  setup.sh  wp-config-extra.php
tests/: conftest.py
tests/integration/: test_scan_docker_lab.py
tests/unit/: test_cve_db.py  test_cve_matcher.py  test_engine.py  test_enum_modules.py  test_models.py  test_modules_load.py  test_recon_modules.py  test_report.py  test_security.py  test_session.py  test_vuln_modules.py  test_waf.py
