[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordpress-bazooka"
version = "0.1.0"
description = "Automated WordPress penetration testing and security audit framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AYI NEDJIMI CONSULTANTS" }]

dependencies = [
    "httpx[socks]>=0.27",
    "dnspython>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pyyaml>=6.0",
    "python-docx>=1.1",
    "jinja2>=3.1",
    "matplotlib>=3.9",
    "cryptography>=42.0",
]

[project.optional-dependencies]
full = [
    "python-nmap>=0.7",
    "playwright>=1.44",
    "networkx>=3.3",
    "graphviz>=0.20",
    "pyage>=1.0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
bazooka = "bazooka:app"

[tool.hatch.build.targets.wheel]
packages = ["core", "modules", "report", "gui", "cve_db"]

[tool.hatch.build.targets.wheel.force-include]
"bazooka.py" = "bazooka.py"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
