[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordpress-bazooka"
version = "0.1.0"
description = "Automated WordPress penetration testing and security audit framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AYI NEDJIMI CONSULTANTS" }]

dependencies = [
    "httpx[socks]>=0.27",
    "dnspython>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pyyaml>=6.0",
    "python-docx>=1.1",
    "jinja2>=3.1",
    "matplotlib>=3.9",
    "cryptography>=42.0",
]

[project.optional-dependencies]
full = [
    "python-nmap>=0.7",
    "playwright>=1.44",
    "networkx>=3.3",
    "graphviz>=0.20",
    "pyage>=1.0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
bazooka = "bazooka:app"

[tool.hatch.build.targets.wheel]
packages = ["core", "modules", "report", "gui", "cve_db"]

[tool.hatch.build.targets.wheel.force-include]
"bazooka.py" = "bazooka.py"

[tool.ruff]
target-version = "py311"
line-length = 110
exclude = ["vendor", "loot", "build", "dist", "cve_db/prewarm_cache.json"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "ASYNC", "S"]
# Ignored rules:
#   E501  : long lines (line-length is already 110)
#   S101  : assert used (pentest tooling uses asserts heavily)
#   S301  : pickle (used internally for cache files)
#   S311  : non-crypto random (used for jitter / fuzzing)
#   S603  : subprocess call (external tool orchestration is core to the project)
#   S607  : starting process with a partial path (PATH-resolved external tools)
#   S110/S112 : try/except pass/continue (defensive pattern for network noise)
#   S324  : md5/sha1 (used for fingerprinting, not auth)
#   S501  : requests without TLS verify (offensive recon may target broken TLS)
#   S105/S108/S306 : false-positive hardcoded secrets / tmp paths in payload signatures
#   F401  : unused imports (re-exports / vendored entrypoints)
#   F541  : f-string without placeholders (cosmetic)
#   F821  : undefined-name (legacy modules to be fixed separately - not auto-fixed by CI)
#   F841  : unused local variable (debugging aids, kept until refactor)
#   B007  : unused loop variable (idiomatic _ replaced lazily)
#   B023  : function uses loop variable (intentional in closures)
#   B904  : raise without from (style preference)
#   B905  : zip without strict= (Python 3.10 compat layers)
#   UP015/UP017/UP037/UP041/UP045 : stylistic upgrade suggestions (mass-rewrite deferred)
#   ASYNC109/ASYNC230 : intentional sync I/O / explicit timeout args in async helpers
#   E402  : late imports for optional deps
#   E702  : multi-statement lines in generated code
ignore = [
    "E501", "E402", "E702",
    "S101", "S105", "S108", "S110", "S112", "S301", "S306", "S311",
    "S324", "S501", "S603", "S607",
    "F401", "F541", "F821", "F841",
    "B007", "B023", "B904", "B905",
    "UP015", "UP017", "UP037", "UP041", "UP045",
    "ASYNC109", "ASYNC230",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60

[tool.mypy]
python_version = "3.11"
strict = true
